# DroidWire

./: CMakeLists.txt  LICENSE
include/droidwire/: droidwire.h
src/: droidwire.cpp
src/test/: droidwire_test.cpp
